# sirfe

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  ROADMAP.md  hello.py  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
src/data/: MakeDatasetApp.py  __init__.py  csvwebauth.py  csvzipwebanon.py  hashenvvars.py  sharepoint_auth_list.py
src/web/: __init__.py  auth.py  db.py
